# platform

./: README.md
contracts/: openapi.yaml
contracts/examples/: gnn_cluster.json  sigma_rules_response.json  threat_report.json
contracts/python/: pyproject.toml
contracts/python/secureshare_contracts/: __init__.py  models.py
contracts/sigma_templates/: dns_query.yaml  email_sender.yaml  file_hash.yaml  ip_connection.yaml  url.yaml
contracts/typescript/: types.ts
docs/: API_CONTRACTS.md
