[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secureshare-contracts"
version = "0.1.0"
description = "Shared API contracts (Pydantic models) for the SecureShare platform and gateway."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
]

[tool.setuptools.packages.find]
include = ["secureshare_contracts*"]
